[gd_scene load_steps=9 format=3 uid="uid://tc3y3rliegfx"]

[ext_resource type="Script" path="res://PowerUpStation.gd" id="1_83o1u"]
[ext_resource type="Texture2D" uid="uid://gxxhesre6s5v" path="res://assets/map/PowerUpStation/PowerUpStationIDLE.png" id="2_e2ako"]
[ext_resource type="AudioStream" uid="uid://com8kyglbp5sn" path="res://assets/sounds/powerUpStationRisingTrimmed.wav" id="3_3tcol"]
[ext_resource type="AudioStream" uid="uid://dh8kjq15oth2d" path="res://assets/sounds/powerUpStationLoop.wav" id="4_cxsgu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_blxtg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e2ako")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wiw0x"]
radius = 28.0179

[sub_resource type="Gradient" id="Gradient_dgq3m"]
offsets = PackedFloat32Array(0, 0.991354)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_773h4"]
gradient = SubResource("Gradient_dgq3m")
width = 100
height = 100
fill = 1
fill_from = Vector2(0.504274, 0.517094)
fill_to = Vector2(0.871795, 0.17094)

[node name="Node2D" type="Node2D"]
light_mask = 3
visibility_layer = 3
position = Vector2(320, 607)
script = ExtResource("1_83o1u")
metadata/_edit_group_ = true

[node name="PowerUpStation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_blxtg")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
light_mask = 3
visibility_layer = 3
z_index = 1
shape = SubResource("CircleShape2D_wiw0x")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
color = Color(0, 0.290196, 0.831373, 1)
energy = 3.39
texture = SubResource("GradientTexture2D_773h4")

[node name="InitialSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3tcol")

[node name="LoopSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cxsgu")
volume_db = 4.657
max_distance = 500.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="finished" from="InitialSound" to="." method="_on_initial_sound_finished"]
[connection signal="finished" from="LoopSound" to="." method="_on_loop_sound_finished"]
